--- a/views/jquery/jquery-validation.ejs
+++ b/views/jquery/jquery-validation.ejs
@@ -1,133 +1,122 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-    <!-- bootstrap datepicker -->
-    <link rel="stylesheet" href="/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
-    <!-- custom -->
-    <link rel='stylesheet' href='/stylesheets/style.css'>
-  </head>
-  <body>
-    <% include ../layout/header.ejs %>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8">
-          <form role="form" action="#" method="POST" id="form">
-            <div class="box-body">
-              <div class="row">
-                <div class="form-group col-lg-6">
-                  <label for="startDate" class="control-label">开始日期</label>
-                  <input type="text" class="form-control date" name="start_date" autocomplete="off" placeholder="这里使用了日期选择器：bootstrap-datepicker" required="true">
-                </div>
-                <div class="form-group col-lg-6">
-                  <label for="startDate" class="control-label">结束日期</label>
-                  <input type="text" class="form-control date" name="end_date" autocomplete="off" placeholder="这里使用了日期选择器：bootstrap-datepicker"  required="true">
-                </div>
-              </div>
-              <div class="row">
-                <div class="form-group col-lg-6">
-                  <label for="city" class="control-label">城市</label>
-                  <select class="form-control" name="city" required>
-                    <option value="">选择城市</option>
-                    <option value="北京">北京</option>
-                  </select>
-                </div>
-                <div class="form-group col-lg-6">
-                  <label for="place" class="control-label">地点</label>
-                  <select name="place" class="form-control" required>
-                    <option value="">选择地点</option>
-                    <option value="香格里拉酒店">香格里拉酒店</option>
-                  </select>
-                </div>
-              </div>
-              <div class="row">
-                <div class="form-group col-lg-6">
-                  <label for="" class="control-label">运营负责人</label>
-                  <input type="text" name="operator" class="form-control" required maxlength="10">
-                </div>
-                <div class="form-group col-lg-6">
-                  <label for="owner" class="control-label">项目负责人</label>
-                  <input type="text" name="owner" class="form-control" required maxlength="10">
-                </div>
-              </div>
-              <div class="row">
-                <div class="form-group col-lg-12">
-                  <label for="bz" class="control-label">备注</label>
-                  <textarea name="p_bz" rows="2" class="form-control" placeholder="备注特殊信息"></textarea>
-              </div>
-            </div>
-            <!-- /.box-body -->
-            <div class="box-footer">
-              <button type="reset" class="btn btn-default">重置</button>
-              <button type="submit" class="btn btn-primary">提交</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+<% include ../layout/head.ejs %>
+<!-- bootstrap datepicker -->
+<link rel="stylesheet" href="/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 
-    <!-- jQuery 3 -->
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap 3.3.7 -->
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- jquery-validation -->
-    <script src="/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="/jquery-validation/dist/localization/messages_zh.js"></script>
-    <!-- bootstrap datepicker -->
-    <script src="/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
-    <script src="/bootstrap-datepicker/dist/locales/bootstrap-datepicker.zh-CN.min.js"></script>
-    <script>
-    $(function(){
-      // 自定义验证方法：结束日期 >= 开始日期
-      $.validator.methods.compareDate = function(value, element, param) {
-          var startDate = jQuery(param).val();
-          var date1 = new Date(Date.parse(startDate.replace("-", "/")));
-          var date2 = new Date(Date.parse(value.replace("-", "/")));
-          return date1 <= date2;
-      };
-      // 表单验证
-      $('#form').validate({
-        errorClass: 'text-danger',
-        errorElement: 'em',
-        rules: {
-          end_date: {
-            required: true,
-            compareDate: 'input[name=start_date]'
-          },
-        },
-        focusInvalid: false,
-        messages: {
-          end_date: {
-            compareDate: '结束日期必须大于开始日期'
-          }
-        },
-        submitHandler: function(form){
-          return false;
-        }
-      });
-      // 日期选择框
-      $('input.date').datepicker({
-        format: "yyyy/mm/dd",
-        weekStart: 7,
-        maxViewMode: 2,
-        language: "zh-CN",
-        // daysOfWeekDisabled: "0,6",
-        // daysOfWeekHighlighted: "0,6",
-        autoclose: true,
-        todayHighlight: true,
-      }).on('show', function (e) {
-        e.preventDefault();
-        e.stopPropagation(); // 禁止触发父元素事件
-      }).on('hide', function (e) {
-        $(this).blur();
-        e.stopPropagation(); // 禁止触发父元素事件
-      });
-    });
-    </script>
-    <% include ../layout/footer.ejs %>
-  </body>
-</html>
+<% include ../layout/header.ejs %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <form role="form" action="#" method="POST" id="form">
+        <div class="box-body">
+          <div class="row">
+            <div class="form-group col-lg-6">
+              <label for="startDate" class="control-label">开始日期</label>
+              <input type="text" class="form-control date" name="start_date" autocomplete="off" placeholder="这里使用了日期选择器：bootstrap-datepicker" required="true">
+            </div>
+            <div class="form-group col-lg-6">
+              <label for="startDate" class="control-label">结束日期</label>
+              <input type="text" class="form-control date" name="end_date" autocomplete="off" placeholder="这里使用了日期选择器：bootstrap-datepicker"  required="true">
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-lg-6">
+              <label for="city" class="control-label">城市</label>
+              <select class="form-control" name="city" required>
+                <option value="">选择城市</option>
+                <option value="北京">北京</option>
+              </select>
+            </div>
+            <div class="form-group col-lg-6">
+              <label for="place" class="control-label">地点</label>
+              <select name="place" class="form-control" required>
+                <option value="">选择地点</option>
+                <option value="香格里拉酒店">香格里拉酒店</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-lg-6">
+              <label for="" class="control-label">运营负责人</label>
+              <input type="text" name="operator" class="form-control" required maxlength="10">
+            </div>
+            <div class="form-group col-lg-6">
+              <label for="owner" class="control-label">项目负责人</label>
+              <input type="text" name="owner" class="form-control" required maxlength="10">
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col-lg-12">
+              <label for="bz" class="control-label">备注</label>
+              <textarea name="p_bz" rows="2" class="form-control" placeholder="备注特殊信息"></textarea>
+          </div>
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+          <button type="reset" class="btn btn-default">重置</button>
+          <button type="submit" class="btn btn-primary">提交</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- jQuery 3 -->
+<script src="/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap 3.3.7 -->
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- jquery-validation -->
+<script src="/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="/jquery-validation/dist/localization/messages_zh.js"></script>
+<!-- bootstrap datepicker -->
+<script src="/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<script src="/bootstrap-datepicker/dist/locales/bootstrap-datepicker.zh-CN.min.js"></script>
+<script>
+$(function(){
+  // 自定义验证方法：结束日期 >= 开始日期
+  $.validator.methods.compareDate = function(value, element, param) {
+      var startDate = jQuery(param).val();
+      var date1 = new Date(Date.parse(startDate.replace("-", "/")));
+      var date2 = new Date(Date.parse(value.replace("-", "/")));
+      return date1 <= date2;
+  };
+  // 表单验证
+  $('#form').validate({
+    errorClass: 'text-danger',
+    errorElement: 'em',
+    rules: {
+      end_date: {
+        required: true,
+        compareDate: 'input[name=start_date]'
+      },
+    },
+    focusInvalid: false,
+    messages: {
+      end_date: {
+        compareDate: '结束日期必须大于开始日期'
+      }
+    },
+    submitHandler: function(form){
+      return false;
+    }
+  });
+  // 日期选择框
+  $('input.date').datepicker({
+    format: "yyyy/mm/dd",
+    weekStart: 7,
+    maxViewMode: 2,
+    language: "zh-CN",
+    // daysOfWeekDisabled: "0,6",
+    // daysOfWeekHighlighted: "0,6",
+    autoclose: true,
+    todayHighlight: true,
+  }).on('show', function (e) {
+    e.preventDefault();
+    e.stopPropagation(); // 禁止触发父元素事件
+  }).on('hide', function (e) {
+    $(this).blur();
+    e.stopPropagation(); // 禁止触发父元素事件
+  });
+});
+</script>
+<% include ../layout/footer.ejs %>
+<% include ../layout/foot.ejs %>
