--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,9 +1,7 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120536891-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
-
-  gtag('config', 'UA-120536891-2');
-</script>
+<!-- <footer>
+  <hr />
+  <div class="container">
+    Copyright &copy; 2019-2020. All rights reserved. 
+    <a href="<%= web.author_twitter %>">Twitter </a> · <a href="<%= web.author_weibo %>">Weibo </a>
+  </div>
+</footer> -->
