--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,3 +1,5 @@
+</head>
+<body>
 <div class="layout-header">
   <nav class="navbar navbar-default">
     <div class="container">
@@ -35,7 +37,7 @@
                   <li class=""><a href="/page/daterangepicker">daterangepicker</a></li>
                   <li role="separator" class="divider"></li>
                   <li class="disabled"><a href="javascript:void(0)">日期库</a></li>
-                  <li class=""><a href="/page/moment">moment</a></li>
+                  <li class=""><a href="http://momentjs.com/" target="_blank">moment <span class="label label-warning pull-right"><i class="glyphicon glyphicon-share-alt"></i></span></a></li>
                   <!-- <li class=""><a href="/page/"></a></li> -->
                 </ul>
               </li>
@@ -72,8 +74,9 @@
   </nav>
 </div>
 <div class="container">
-  <h3 class="lead"><%= title %>
-    <small><a class="label label-warning" href="<%= official_link %>" target="_blank">官方地址</a></small>
-    <small><a class="label label-success" href="<%= doc_link %>" target="_blank">文档库地址</a></small>
-  </h3>
+  <p class="lead"><%= title %>
+    <small style="font-size: 0.5em"><a class="label label-warning" href="<%= official_link %>" target="_blank">官方地址</a></small>
+    <small style="font-size: 0.5em"><a class="label label-success" href="<%= doc_link %>" target="_blank">文档库地址</a></small>
+  </p>
 </div>
+<a class="github-fork-ribbon" href="https://github.com/pengloo53/js-plugin-example" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
