--- a/views/table/jquery-tabledit.ejs
+++ b/views/table/jquery-tabledit.ejs
@@ -1,107 +1,96 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-    <!-- custom -->
-    <link rel='stylesheet' href='/stylesheets/style.css'>
-  </head>
-  <body>
-    <% include ../layout/header.ejs %>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <table class="table table-bordered table-striped">
-            <tr>
-                <th>#</th>
-                <th>公司</th>
-                <th>地点</th>
-                <th>负责人</th>
-                <th>人员数</th>
-                <th>备注</th>
-            </tr>
-            <% for(var i = 0 ; i < dataList.length; i++){ %>
-              <tr>
-                <td class="hidden"><%= dataList[i].id %></td>
-                <td><%= i+1 %></td>
-                <td><%= dataList[i].plant %></td>
-                <td><%= dataList[i].place %></td>
-                <td><%= dataList[i].owner %></td>
-                <td><%= dataList[i].preparation %></td>
-                <td><%= dataList[i].bz %></td>
-              </tr>
-            <% } %>
-          </table>
-        </div>
-      </div>
-    </div>
+<% include ../layout/head.ejs %>
 
-    <!-- jQuery 3 -->
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap 3.3.7 -->
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- tabledit -->
-    <script src="/jquery-tabledit/jquery.tabledit.min.js"></script>
-    <script>
-      $(function(){
-        $('.table').Tabledit({
-          url: '/ajax/tabledit',
-          autoFocus: false,
-          // groupClass: 'btn-group btn-group-xs',
-          // inputClass: 'form-control input-sm',   // input 最小只能到sm了
-          // hideIdentifier: true,   // 手动设置hidden 取代 hideIndentifier
-          buttons: {
-            edit:{
-              // html: '<span class="glyphicon glyphicon-pencil"></span>',
-              action: 'edit'
-            },
-            delete: {
-              // html: '<span class="glyphicon glyphicon-trash"></span>',
-              action: 'delete'
-            },
-            confirm: {
-              html: '确定?'
-            },
-            restore: {
-              html: '取消',
-            },
-            save: {
-              html: '保存?'
-            }
-          },
-          columns: {
-              identifier: [0, 'table_id'],  //  列从0开始，id是table的第2列
-              editable: [[2, 'table_plant'],[3, 'table_place'], [4, 'table_owner'],[5, 'table_preparation'],[6, 'table_bz']]
-          },
-          onDraw: function() {
-              console.log('onDraw()');
-          },
-          onAjax: function(action, serialize) {
-              console.log('onAjax(action, serialize)');
-              console.log(action);
-              console.log(serialize);
-          },
-          onSuccess: function(data, textStatus, jqXHR) {
-              console.log('onSuccess(data, textStatus, jqXHR)');
-              console.log(data);
-              console.log(textStatus);
-              console.log(jqXHR);
-          },
-          onFail: function(jqXHR, textStatus, errorThrown) {
-              console.log('onFail(jqXHR, textStatus, errorThrown)');
-              console.log(jqXHR);
-              console.log(textStatus);
-              console.log(errorThrown);
-          },
-          onAlways: function() {
-              console.log('onAlways()');
-          }
-        });
-      });
-    </script>
-    <% include ../layout/footer.ejs %>
-  </body>
-</html>
+<% include ../layout/header.ejs %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <table class="table table-bordered table-striped">
+        <tr>
+            <th>#</th>
+            <th>公司</th>
+            <th>地点</th>
+            <th>负责人</th>
+            <th>人员数</th>
+            <th>备注</th>
+        </tr>
+        <% for(var i = 0 ; i < dataList.length; i++){ %>
+          <tr>
+            <td class="hidden"><%= dataList[i].id %></td>
+            <td><%= i+1 %></td>
+            <td><%= dataList[i].plant %></td>
+            <td><%= dataList[i].place %></td>
+            <td><%= dataList[i].owner %></td>
+            <td><%= dataList[i].preparation %></td>
+            <td><%= dataList[i].bz %></td>
+          </tr>
+        <% } %>
+      </table>
+    </div>
+  </div>
+</div>
+
+<!-- jQuery 3 -->
+<script src="/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap 3.3.7 -->
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- tabledit -->
+<script src="/jquery-tabledit/jquery.tabledit.min.js"></script>
+<script>
+  $(function(){
+    $('.table').Tabledit({
+      url: '/ajax/tabledit',
+      autoFocus: false,
+      // groupClass: 'btn-group btn-group-xs',
+      // inputClass: 'form-control input-sm',   // input 最小只能到sm了
+      // hideIdentifier: true,   // 手动设置hidden 取代 hideIndentifier
+      buttons: {
+        edit:{
+          // html: '<span class="glyphicon glyphicon-pencil"></span>',
+          action: 'edit'
+        },
+        delete: {
+          // html: '<span class="glyphicon glyphicon-trash"></span>',
+          action: 'delete'
+        },
+        confirm: {
+          html: '确定?'
+        },
+        restore: {
+          html: '取消',
+        },
+        save: {
+          html: '保存?'
+        }
+      },
+      columns: {
+          identifier: [0, 'table_id'],  //  列从0开始，id是table的第2列
+          editable: [[2, 'table_plant'],[3, 'table_place'], [4, 'table_owner'],[5, 'table_preparation'],[6, 'table_bz']]
+      },
+      onDraw: function() {
+          console.log('onDraw()');
+      },
+      onAjax: function(action, serialize) {
+          console.log('onAjax(action, serialize)');
+          console.log(action);
+          console.log(serialize);
+      },
+      onSuccess: function(data, textStatus, jqXHR) {
+          console.log('onSuccess(data, textStatus, jqXHR)');
+          console.log(data);
+          console.log(textStatus);
+          console.log(jqXHR);
+      },
+      onFail: function(jqXHR, textStatus, errorThrown) {
+          console.log('onFail(jqXHR, textStatus, errorThrown)');
+          console.log(jqXHR);
+          console.log(textStatus);
+          console.log(errorThrown);
+      },
+      onAlways: function() {
+          console.log('onAlways()');
+      }
+    });
+  });
+</script>
+<% include ../layout/footer.ejs %>
+<% include ../layout/foot.ejs %>
